vouchers and images

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
         <a class="navbar-brand col-sm-3 col-md-2 mr-0"
            href="{{ path('shop_index') }}">Flora queen test</a>
         <a class="navbar-brand col-sm-3 col-md-2 mr-0"
-           href="">Voucher</a>
+           href="{{ path('shop_voucher') }}">Voucher</a>
         <a class="navbar-brand col-sm-2 col-md-1 mr-0"
            href="{{ path('shop_basket') }}">Basket
 
